# leptos-fullstack-test

./: .gitignore  Cargo.toml  flake.nix  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
leptos-project/: Cargo.toml
leptos-project/src/: app.rs  lib.rs  prisma.rs
leptos-server/: Cargo.toml
leptos-server/src/: app.rs  prisma.rs
leptos-server/style/: tailwind.css
prisma-cli/: Cargo.toml
src/: lib.rs  main.rs
